# armor_pass

./: .gitignore  Cargo.toml  pull_request_envent.json  test_encrypt_decrypt.txt  unicode-blocks
.github/workflows/: ci.yml
coverage/: cobertura.xml
src/: autocomplete.rs  encryption.rs  generator.rs  lib.rs  main.rs  password_manager.rs  shell.rs  utility.rs  validation.rs
tests/: integration_password_manager.rs  integration_tests.rs
