[package]
name = "armor_pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.62"
prettytable-rs = "0.10.0"
rand = "0.8.5"
serde = { version = "1.0.193", features = [ "derive" ] }
serde_json = "1.0.108"

[dev-dependencies]
uuid = { version = "1.6", features = ["v4"] }
